Table and filter done

--- a/my_index.html
+++ b/my_index.html
@@ -38,6 +38,8 @@
                       </div>
                     </div>              
                         <button id="filterButton" class="btn btn-primary button_style">Filter Table</button>
+                        <button id="entireTable" class="btn btn-primary button_style">Entire Table</button>
+
                         <table class="table" id="data-table"></table>   
 
                        </div>
