working on step2

--- a/UFO-level-1/index_level1.html
+++ b/UFO-level-1/index_level1.html
@@ -24,24 +24,23 @@
                 <p class="lead"> Explore the wide and mysterious world of unexplained aerial phenomena.</p>
                 <hr class="my-2">
                 <p>This is a partial list by date of sightings of alleged unidentified flying objects (UFOs), including reports of where, shape, duration and comments.</p>  
-            <div class="container">
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                     <h3>   Search Data</h3>
-                <br>
-                    <div class="form-group">
-                        <div class="input-group-prepend">
+                    <br>
+                    <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-md">Date</span>
                         <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-md" id="dateTimeInput" placeholder="D/M/YYYY">
-                    </div> 
+                    </div>
                     <br>
-                        <button id="filterButton" class="btn btn-primary button_style">Filter Table</button>
-                        <button id="entireTable" class="btn btn-primary button_style">Entire Table</button>
-                        <table class="table" style="width:90%; margin:auto" id="data-table"></table>   
-                       </div>
-                      </div>  
-                    </div>  
+                    <button id="filterButton" class="btn btn-primary button_style">Filter Table</button>
+                    <button id="entireTable" class="btn btn-primary button_style">Entire Table</button>
+                    </div>
                 </div>
             </div>
+        <div class="container"    
+            <div class="table" id="data-table"></div>  
+        </div>
+                     
                         
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
