--- a/UFO-level-1/index_level1.html
+++ b/UFO-level-1/index_level1.html
@@ -24,23 +24,54 @@
                 <p class="lead"> Explore the wide and mysterious world of unexplained aerial phenomena.</p>
                 <hr class="my-2">
                 <p>This is a partial list by date of sightings of alleged unidentified flying objects (UFOs), including reports of where, shape, duration and comments.</p>  
+            </div>
+            <div class="container">
                 <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                     <h3>   Search Data</h3>
-                    <br>
+                </div>
+                <div class="form-group">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-md">Date</span>
                         <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-md" id="dateTimeInput" placeholder="D/M/YYYY">
-                    </div>
-                    <br>
-                    <button id="filterButton" class="btn btn-primary button_style">Filter Table</button>
-                    <button id="entireTable" class="btn btn-primary button_style">Entire Table</button>
+                    </div>   
+                </div>
+                <div class="form-group">
+                    <div class="input-group input-group-md">
+                        <span class="input-group-text" id="inputGroup-sizing-md">City</span>
+                        <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-md"id="cityInput">
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="input-group input-group-md">
+                        <span class="input-group-text" id="inputGroup-sizing-md">State</span>
+                        <select class="custom-select" id="select-state">
+                            <option selected></option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group input-group-md">
+                        <span class="input-group-text" id="inputGroup-sizing-md">Country</span>
+                        <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-md"id="countryInput" placeholder="us">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group input-group-md">
+                        <span class="input-group-text" id="inputGroup-sizing-md">Shapes</span>
+                        <select class="custom-select" id="select-shape">
+                            <option selected></option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="input-group input-group-md">
+                        <button id="filterButton" class="btn btn-primary button_style">Filter Table</button>
+                        <span>&nbsp;</span>
+                        <button id="entireTable" class="btn btn-primary button_style">Entire Table</button>
+                        <table class="table" id="data-table"></table>   
+                    </div>  
+                </div>
             </div>
-        <div class="container"    
-            <div class="table" id="data-table"></div>  
-        </div>
-                     
                         
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -49,6 +80,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="static/js/data.js"></script>         <!-- must be in this order-->
     <script type="text/javascript" src="static/js/app1.js"></script>
+    <script type="text/javascript" src="static/js/states.js"></script>
+    <script type="text/javascript" src="static/js/shapes.js"></script>
 
     </body>
 </html>
