--- a/UFO-level-2/index_level2.html
+++ b/UFO-level-2/index_level2.html
@@ -32,19 +32,19 @@
                 <div class="form-group">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-md">Date</span>
-                        <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-md" id="dateTimeInput" placeholder="D/M/YYYY">
+                        <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-md" id="datetime" placeholder="D/M/YYYY">
                     </div>   
                 </div>
                 <div class="form-group">
                     <div class="input-group input-group-md">
                         <span class="input-group-text" id="inputGroup-sizing-md">City</span>
-                        <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-md"id="cityInput">
+                        <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-md"id="city">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="input-group input-group-md">
                         <span class="input-group-text" id="inputGroup-sizing-md">State</span>
-                        <select class="custom-select" id="select-state">
+                        <select class="form-control" id="state">
                             <option selected></option>
                         </select>
                     </div>
@@ -52,13 +52,13 @@
                 <div class="form-group">
                     <div class="input-group input-group-md">
                         <span class="input-group-text" id="inputGroup-sizing-md">Country</span>
-                        <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-md"id="countryInput" placeholder="us">
+                        <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-md"id="country" placeholder="us">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="input-group input-group-md">
                         <span class="input-group-text" id="inputGroup-sizing-md">Shapes</span>
-                        <select class="custom-select" id="select-shape">
+                        <select class="form-control" id="shape">
                             <option selected></option>
                         </select>
                     </div>
